Add setup files for lvgl with m5stack core2

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,11 @@ board = m5stack-core2
 framework = arduino
 monitor_filters = esp32_exception_decoder
 monitor_speed = 115200
+
+lib_deps = 
+    m5stack/M5Core2
+    lvgl/lvgl @ 8.2.0
+
+build_flags = 
+    -DLV_CONF_INCLUDE_SIMPLE ; needed for lvgl
+    ; -DCORE_DEBUG_LEVEL=5
