make it work with M5Stack CoreS3, M5Unified

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,32 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:m5stack-core2]
-platform = espressif32
+platform = espressif32@6.3.0
 board = m5stack-core2
 framework = arduino
 monitor_filters = esp32_exception_decoder
 monitor_speed = 115200
-
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DM5UNIFIED
 lib_deps = 
-    m5stack/M5Core2
+    m5stack/M5Unified@0.1.6
+
+; lifted from https://github.com/ronron-gh/ESP32_EdgeAI_PlatformIO/blob/main/Platformio/M5CoreS3_FIngerDirection/platformio.ini
+[env:m5stack-coreS3]
+platform = espressif32@6.3.0
+board = esp32s3box
+framework = arduino
+board_build.arduino.memory_type = qio_qspi 
+board_build.arduino.partitions = default_16MB.csv
+upload_speed = 1500000
+monitor_speed = 115200
+board_build.f_flash = 80000000L
+board_build.filesystem = spiffs
+build_flags = 
+    -DCORE_DEBUG_LEVEL=4
+    -DARDUINO_M5STACK_CORES3
+    -DM5UNIFIED
+lib_deps = 
+    m5stack/M5Unified@0.1.6
+lib_ldf_mode = deep
