--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ build_flags =
     -DCORE_DEBUG_LEVEL=4
     -DM5UNIFIED
 lib_deps = 
-    m5stack/M5Unified@0.1.6
+    m5stack/M5Unified@^0.1.7
 
 ; lifted from https://github.com/ronron-gh/ESP32_EdgeAI_PlatformIO/blob/main/Platformio/M5CoreS3_FIngerDirection/platformio.ini
 [env:m5stack-coreS3]
@@ -36,5 +36,5 @@ build_flags =
     -DARDUINO_M5STACK_CORES3
     -DM5UNIFIED
 lib_deps = 
-    m5stack/M5Unified@0.1.6
+    m5stack/M5Unified@^0.1.7
 lib_ldf_mode = deep
