reshuffle platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,33 +8,70 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:m5stack-core2]
-platform = espressif32@6.3.0
-board = m5stack-core2
-framework = arduino
-monitor_filters = esp32_exception_decoder
+[base]
+monitor_filters = esp32_exception_decoder, colorize
 monitor_speed = 115200
+upload_speed =  460800
+build_type = debug
+platform = espressif32@6.3.0
+framework = arduino
+; platform_packages = 
+; 	platformio/tool-openocd-esp32@^2.1200.20230419
+;     platformio/tool-esptoolpy@^1.40400.0
+
+[m5libs]
+lib_deps = 
+    m5stack/M5Unified@^0.1.7
+lib_ldf_mode = deep
+
+[m5stack-core2]
+extends = base
+board = m5stack-core2
 build_flags = 
     -DCORE_DEBUG_LEVEL=4
     -DM5UNIFIED
-lib_deps = 
-    m5stack/M5Unified@^0.1.7
+
 
 ; lifted from https://github.com/ronron-gh/ESP32_EdgeAI_PlatformIO/blob/main/Platformio/M5CoreS3_FIngerDirection/platformio.ini
-[env:m5stack-coreS3]
-platform = espressif32@6.3.0
+[m5stack-coreS3]
+extends = base
 board = esp32s3box
-framework = arduino
 board_build.arduino.memory_type = qio_qspi 
 board_build.arduino.partitions = default_16MB.csv
 upload_speed = 1500000
-monitor_speed = 115200
 board_build.f_flash = 80000000L
 board_build.filesystem = spiffs
 build_flags = 
     -DCORE_DEBUG_LEVEL=4
     -DARDUINO_M5STACK_CORES3
     -DM5UNIFIED
-lib_deps = 
-    m5stack/M5Unified@^0.1.7
-lib_ldf_mode = deep
+
+
+; [lilygo-t-displays3]
+; extends = base
+; board = lilygo-t-displays3
+; build_flags = 
+;     -DLV_LVGL_H_INCLUDE_SIMPLE
+;     -DARDUINO_USB_CDC_ON_BOOT=0
+;     -DDISABLE_ALL_LIBRARY_WARNINGS
+;     -DARDUINO_USB_MODE=1
+; 	-DCORE_DEBUG_LEVEL=5
+;     ; Choose different options according to different driver chips
+;     ; Early use of CST328
+;     -DTOUCH_MODULES_CST_MUTUAL
+;     ; Use CST816 by default
+;     ; -DTOUCH_MODULES_CST_SELF        
+
+[squareline_m5stack_example]
+build_src_filter =
+	-<**/*.*>
+	+<m5stack/**>
+
+[env:squareline_m5stack_core2]
+extends = m5stack-core2, m5libs, squareline_m5stack_example
+
+[env:squareline_m5stack_coreS3]
+extends = m5stack-coreS3, m5libs, squareline_m5stack_example
+
+
+
