bring in the https://github.com/RileyCornelius/T-Display-S3-Lvgl-Example example

--- a/platformio.ini
+++ b/platformio.ini
@@ -30,6 +30,7 @@ board = m5stack-core2
 build_flags = 
     -DCORE_DEBUG_LEVEL=4
     -DM5UNIFIED
+    -DLV_CONF_PATH=../../src/m5stack/lv_conf.h
 
 
 ; lifted from https://github.com/ronron-gh/ESP32_EdgeAI_PlatformIO/blob/main/Platformio/M5CoreS3_FIngerDirection/platformio.ini
@@ -42,14 +43,25 @@ upload_speed = 1500000
 board_build.f_flash = 80000000L
 board_build.filesystem = spiffs
 build_flags = 
+    -DLV_CONF_PATH=../../src/m5stack/lv_conf.h
     -DCORE_DEBUG_LEVEL=4
     -DARDUINO_M5STACK_CORES3
     -DM5UNIFIED
 
 
-; [lilygo-t-displays3]
-; extends = base
-; board = lilygo-t-displays3
+[lilygo-t-displays3]
+extends = base
+board = lilygo-t-displays3
+build_flags =
+    -DCORE_DEBUG_LEVEL=5
+    -DTFTI_USER_SETUP_PATH="../TFT_eSPI_Setups/Setup206_LilyGo_T_Display_S3_mmMicky.h"
+    -DUSER_SETUP=../../src/lilygo-T-S3/lv_conf.h
+    -DLV_CONF_PATH=../../src/lilygo-T-S3/lv_conf.h
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    ; -DDISABLE_ALL_LIBRARY_WARNINGS
+    -DARDUINO_USB_MODE=1
+    -DTOUCH_MODULES_CST_MUTUAL
+
 ; build_flags = 
 ;     -DLV_LVGL_H_INCLUDE_SIMPLE
 ;     -DARDUINO_USB_CDC_ON_BOOT=0
@@ -67,11 +79,19 @@ build_src_filter =
 	-<**/*.*>
 	+<m5stack/**>
 
+[squareline_liligo_t_s3_example]
+build_src_filter =
+	-<**/*.*>
+	+<lilygo-T-S3/**>
+
 [env:squareline_m5stack_core2]
 extends = m5stack-core2, m5libs, squareline_m5stack_example
 
 [env:squareline_m5stack_coreS3]
 extends = m5stack-coreS3, m5libs, squareline_m5stack_example
+
+[env:squareline_liligo_t_s3]
+extends =lilygo-t-displays3, squareline_liligo_t_s3_example
 
 
 
